Added API Project and Class Library

--- a/HiveHarmony/HiveHarmony.csproj
+++ b/HiveHarmony/HiveHarmony.csproj
@@ -22,4 +22,8 @@
       </Resource>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\HiveHarmony.Core\HiveHarmony.Core.csproj" />
+    </ItemGroup>
+
 </Project>
